# hdrnn

./: .clang-format  .gitignore  CMakeLists.txt  README.md  dataset.h  main.c  mnist.c  mnist.h
src/: dataset.c  dataset.h  main.c  neunet.c  neunet.h
